Added @HttpExchange client, proper exceptions, and ProblemDetail error handling